feat: added users route
